--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#As the first step, Data preprocessing is done, which includes loading the dataset, and then splitting it into training and testing sets with a percentage of 80% to 20%. Finally the data is scaled to a common scale using minmax scaler which ranges the data from 0 to 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,14 +21,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ssplitting the dataset into training and testing\n",
+    "#splitting the dataset into training and testing\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train,X_test,y_train,y_test = train_test_split(data.iloc[:, :-1], data.iloc[:, -1], test_size=0.2, random_state=42)\n"
+    "X_train,X_test,y_train,y_test = train_test_split(data.iloc[:, :-1], data.iloc[:, -1], test_size=0.2, random_state=42)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scaling the data to improve performance\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "X_train_= scaler.fit_transform(X_train)\n",
+    "X_test_=scaler.transform(X_test)\n",
+    "\n"
    ]
   }
  ],
