--- a/main.ipynb
+++ b/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,51 @@
     "X_train_= scaler.fit_transform(X_train)\n",
     "X_test_=scaler.transform(X_test)\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#KNN model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best hyperparameters: {'n_neighbors': 10, 'p': 1, 'weights': 'distance'}\n",
+      "Best accuracy: 0.923913043478261\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Create a KNN classifier\n",
+    "knn = KNeighborsClassifier()\n",
+    "\n",
+    "# Define the hyperparameter grid\n",
+    "param_grid = {'n_neighbors': np.arange(1, 50),\n",
+    "              'weights': ['uniform', 'distance'],\n",
+    "              'p': [1, 2]}\n",
+    "\n",
+    "# Create a grid search object\n",
+    "grid_search = GridSearchCV(knn, param_grid, cv=5, scoring='accuracy')\n",
+    "\n",
+    "# Fit the grid search to the training data\n",
+    "grid_search.fit(X_train_, y_train)\n",
+    "\n",
+    "# Print the best hyperparameters and accuracy score\n",
+    "print(\"Best hyperparameters:\", grid_search.best_params_)\n",
+    "print(\"Best accuracy:\", grid_search.best_score_)\n"
    ]
   }
  ],
