knn model training(ver2)

--- a/main.ipynb
+++ b/main.ipynb
@@ -54,12 +54,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#KNN model"
+    "#KNN model is trained. first the best hyperparameters are taken using gridsearchCv and then thoe selected hyperparameters are instantiated and the model is trained."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -72,16 +72,17 @@
     }
    ],
    "source": [
+    "#getting the best hyperparameters\n",
+    "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "import numpy as np\n",
     "\n",
     "# Create a KNN classifier\n",
     "knn = KNeighborsClassifier()\n",
     "\n",
-    "# Define the hyperparameter grid\n",
-    "param_grid = {'n_neighbors': np.arange(1, 50),\n",
-    "              'weights': ['uniform', 'distance'],\n",
-    "              'p': [1, 2]}\n",
+    "# Define the hyperparameter grid to get the best hyperparameters\n",
+    "param_grid = {'n_neighbors': np.arange(1, 20),'weights': ['uniform', 'distance'],'p': [1, 2]}\n",
     "\n",
     "# Create a grid search object\n",
     "grid_search = GridSearchCV(knn, param_grid, cv=5, scoring='accuracy')\n",
@@ -92,6 +93,47 @@
     "# Print the best hyperparameters and accuracy score\n",
     "print(\"Best hyperparameters:\", grid_search.best_params_)\n",
     "print(\"Best accuracy:\", grid_search.best_score_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9066232356134636\n",
+      "Precision: 0.9418604651162791\n",
+      "Recall: 0.8307692307692308\n",
+      "F1 score: 0.8828337874659401\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "# Instantiate the KNN model with the selected hyperparameters\n",
+    "knn_model = KNeighborsClassifier(n_neighbors=10, weights='distance', p=1)\n",
+    "\n",
+    "# Train the KNN model on the training set\n",
+    "knn_model.fit(X_train_, y_train)\n",
+    "\n",
+    "# Predict the labels of the testing set\n",
+    "y_pred = knn_model.predict(X_test_)\n",
+    "\n",
+    "# Evaluate the performance of the KNN model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"F1 score:\", f1)"
    ]
   }
  ],
